# XScreenShot

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  tags
inc/: Makefile.am  Makefile.in  g_def.h  g_pixbuf.h  transform.h
src/: Makefile.am  Makefile.in  g_save.c  pixbuf.c  shot.c
src/util/bmp_png/: bmp2png.c  bmp_png.h  bmphed.h  common.c  common.h  png2bmp.c
src/util/jpeg2bmp/: cderror.h  cdjpeg.h  djpeg.c  jerror.h
src/util/list/: list.c  list.h
